# LaplasChat

./: .dockerignore  .env.example  .env.template  .gitignore  .mcp.json  .vercelignore  AGENTS.md  CHAT-PLAN.MD  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROGRESS-TRACKER.md  README.md  biome.json  components.json  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  progress-tracker.md  tsconfig.app.json  vercel.json  vite.config.ts
.cursor/rules/: main.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
.roo/: mcp.json
docs/: README.md  architecture-overview.md  core-layer.md  development-guide.md  figma-to-frontend-workflow.md  progress-tracker-guide.md  sidebar-implementation-plan.md  tech-stack.md
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx
src/components/hooks/: use-copy-to-clipboard.ts
src/components/layout/: Sidebar.tsx
src/components/magicui/: animated-shiny-text.tsx  morphing-text.tsx
src/components/ui/: ChatItem.tsx  ChatSearch.tsx  Logo.tsx  Navigation.tsx  NewChatButton.tsx  button.tsx  combobox.tsx  command.tsx  copy-button.tsx  drawer.tsx  dropdown-menu.tsx  (+8 more)
src/lib/: axios.ts
src/routes/: __root.tsx  auth.oauth.callback.google.tsx  chat.$dialogId.tsx  index.css  index.tsx  landing.tsx  login.tsx  onboarding.tsx  workflow.tsx
src/widgets/: ChatSidebar.tsx
(+200 files in other folders)
